[package]
name = "plexo-core"
version = "0.3.3"
edition = "2021"

[dependencies]
plexo-sdk.workspace = true
uuid = "1.8.0"
chrono = "0.4.37"
jsonwebtoken = "9.3.0"
serde = "1.0.197"
argon2 = "0.5.3"
oauth2 = "4.4.2"
serde_json = "1.0.115"
thiserror = "1.0.58"
cookie = "0.18.1"
dotenv = "0.15.0"
async-graphql-poem = "7.0.4"
lazy_static = "1.4.0"
tokio-stream = "0.1.15"
tokio = { version = "1.37.0", features = ["full"] }
async-graphql = { version = "7.0.3", features = [
    "decimal",
    "chrono",
    "dataloader",
    "uuid",
    "tracing",
] }
reqwest = { version = "0.12.3", features = ["json"] }
poem-openapi = { version = "5.0.0", features = [
    "swagger-ui",
    "chrono",
    "uuid",
] }
poem = { version = "3.0.0", features = ["cookie", "static-files"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
lettre = "0.11.6"
askama = "0.12.1"
