[package]
name = "plexo-next"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.19.1"
dotenv = "0.15.0"
git2 = "0.18.3"
plexo-sdk.workspace = true
tokio = { version = "1.36.0", features = ["macros"] }
