[package]
name = "plexo-sdk"
version = "0.4.21"
edition = "2021"
description = "Plexo SDK"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4"] }
thiserror = { version = "1.0.58", features = [] }
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
    "chrono",
    "time",
] }
tokio = { version = "1.36.0", features = ["full"] }
strum_macros = "0.26.2"
strum = "0.26.2"
async-trait = "0.1.77"
derive_builder = "0.20.0"
dotenv = "0.15.0"
async-graphql = { version = "7.0.2", features = [
    "decimal",
    "chrono",
    "dataloader",
    "uuid",
] }
poem-openapi = { version = "4.0.1", features = [
    "swagger-ui",
    "chrono",
    "uuid",
] }
serde = "1.0.197"
async-openai = "0.19.1"
serde_json = "1.0.114"
askama = "0.12.1"
tokio-stream = "0.1.14"
