[package]
name = "plexo-sdk"
version = "0.5.4"
edition = "2021"
description = "Plexo SDK"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = { version = "1.0.58", features = [] }
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
    "chrono",
    "time",
] }
tokio = { version = "1.37.0", features = ["full"] }
strum_macros = "0.26.2"
strum = "0.26.2"
async-trait = "0.1.79"
derive_builder = "0.20.0"
dotenv = "0.15.0"
async-graphql = { version = "7.0.3", features = [
    "decimal",
    "chrono",
    "dataloader",
    "uuid",
] }
poem-openapi = { version = "5.0.0", features = [
    "swagger-ui",
    "chrono",
    "uuid",
] }
serde = "1.0.197"
async-openai = "0.20.0"
serde_json = "1.0.115"
askama = "0.12.1"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
